[package]
name = "web-butter"
version = "1.0.0"
description = "A simple no-cost wrapper for the web_sys crate to get auto-completes from IDE"
homepage = "https://github.com/wasmly/web-butter"
repository = "https://github.com/wasmly/web-butter"
keywords = ["rustwasm","web-sys","wrapper","wasm-bindgen","web-assembly"]
categories = ["wasm"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = []
all = []

[dependencies]
log = "0.4"
derive_more = "0.99"