[package]
name = "simple-example"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
console_log = { version = "0.2" }
console_error_panic_hook = { version = "0.1" }

[dependencies.web-sys]
version = "0.3.5"
features = []

[dependencies.web-butter]
version = "1.0"
path = "../.."
features = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
